src/test/deca/syntax/invalid/test_synt13.deca
//Resultat:
//      Erreur syntaxique : classs token non reconnu ligne 1
classs A{
void x;
}
